--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1"
+    "vue": "^3.0.0-rc.1",
+    "serialize-javascript": ">=3.1.0"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.1",
