--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1",
-    "serialize-javascript": ">=3.1.0"
+    "vue": "^3.0.5"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.1",
-    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "@vitejs/plugin-vue": "^1.2.1",
+    "@vue/compiler-sfc": "^3.0.5",
+    "typescript": "^4.1.3",
+    "vite": "^2.1.5",
+    "vue-tsc": "^0.0.15",
     "autoprefixer": "^9.8.6",
-    "tailwindcss": "^1.7.3"
+    "postcss": "^8.2.9",
+    "tailwindcss": "^1.9.6"
   }
 }
